--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
             <a class="nav-link" href="pages/productos.html">Productos</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="pages/subastas.html">Subastas</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="pages/contact.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pages/login.html">Iniciar Sesión</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pages/registro.html">Registro</a>
           </li>
         </ul>
       </div>
