--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,6 +14,8 @@
             <li><a href="inicio.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="contact.html">Contacto</a></li>
+            <li><a href="login.html">Iniciar Sesión</a></li>
+            <li><a href="registro.html">Registro</a></li>
           </ul>
         </nav>
       </header>
