--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,50 +1,290 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Productos</title>
-  <link rel="stylesheet" href="../css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Catálogo de autos de lujo en ChangAI">
+    <title>Productos - ChangAI</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="main-header">
-        <a href="../index.html" class="brand">ChangAI</a>
-        <nav class="navbar">
-          <ul>
-            <li><a href="inicio.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="contact.html">Contacto</a></li>
-          </ul>
-        </nav>
-      </header>
-      
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="../index.html">
+                <i class="fas fa-car-side"></i> ChangAI
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="subastas.html">Subastas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registro.html">Registro</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <main class="content">
-    <section class="features">
-      <h1>Autos de lujo</h1>
+    <!-- Hero Section -->
+    <header class="productos-hero">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 text-center text-white">
+                    <h1 class="display-4 fw-bold">Nuestro Catálogo</h1>
+                    <p class="lead">Descubrí nuestra exclusiva selección de autos de lujo</p>
+                </div>
+            </div>
+        </div>
+    </header>
 
-      <div class="product">
-        <img src="../images/Audi R8.png" alt="Audi R8">
-        <h2>Audi R8</h2>
-        <p>Potencia, elegancia y tecnología en un solo vehículo deportivo.</p>
-      </div>
-
-      <div class="product">
-        <img src="../images/MiniCooper.png" alt="Mini Cooper">
-        <h2>Mini Cooper</h2>
-        <p>Diseño icónico y versatilidad para la ciudad con espíritu deportivo.</p>
-      </div>
-
-      <div class="product">
-        <img src="../images/Porshe1.png" alt="Porsche 911">
-        <h2>Porsche 911</h2>
-        <p>Una leyenda sobre ruedas con un equilibrio perfecto entre potencia y estilo.</p>
-      </div>
+    <!-- Filter Section -->
+    <section class="filter-section py-4 bg-light">
+        <div class="container">
+            <div class="row g-3">
+                <div class="col-md-3">
+                    <select class="form-select">
+                        <option selected>Marca</option>
+                        <option>Audi</option>
+                        <option>Porsche</option>
+                        <option>BMW</option>
+                        <option>Mercedes-Benz</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <select class="form-select">
+                        <option selected>Precio</option>
+                        <option>Hasta $100,000</option>
+                        <option>$100,000 - $200,000</option>
+                        <option>$200,000 - $300,000</option>
+                        <option>Más de $300,000</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <select class="form-select">
+                        <option selected>Año</option>
+                        <option>2024</option>
+                        <option>2023</option>
+                        <option>2022</option>
+                        <option>2021</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <button class="btn btn-primary w-100">Filtrar</button>
+                </div>
+            </div>
+        </div>
     </section>
-  </main>
 
-  <footer class="main-footer">
-    <p>&copy; 2025 - ChangAi</p>
-  </footer>
+    <!-- Products Grid -->
+    <section class="products-grid py-5">
+        <div class="container">
+            <div class="row g-4">
+                <!-- Audi R8 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="product-card">
+                        <div class="product-badge">Nuevo</div>
+                        <img src="../images/Audi R8.png" class="card-img-top" alt="Audi R8">
+                        <div class="card-body">
+                            <h5 class="card-title">Audi R8 V10 Plus</h5>
+                            <div class="product-specs">
+                                <span><i class="fas fa-calendar"></i> 2024</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 0 km</span>
+                                <span><i class="fas fa-gas-pump"></i> Gasolina</span>
+                            </div>
+                            <p class="card-text">El Audi R8 V10 Plus representa la máxima expresión del rendimiento deportivo. Con su motor V10 de 620 caballos de fuerza, transmisión de doble embrague y tracción integral quattro, ofrece una experiencia de conducción inigualable.</p>
+                            <div class="product-features">
+                                <span><i class="fas fa-horse"></i> 620 HP</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 330 km/h</span>
+                                <span><i class="fas fa-clock"></i> 3.1s</span>
+                            </div>
+                            <div class="product-price">
+                                <span class="price">$250,000 USD</span>
+                                <button class="btn btn-primary">Ver Detalles</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Porsche 911 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="product-card">
+                        <div class="product-badge">Destacado</div>
+                        <img src="../images/Porshe1.png" class="card-img-top" alt="Porsche 911">
+                        <div class="card-body">
+                            <h5 class="card-title">Porsche 911 GT3</h5>
+                            <div class="product-specs">
+                                <span><i class="fas fa-calendar"></i> 2024</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 500 km</span>
+                                <span><i class="fas fa-gas-pump"></i> Gasolina</span>
+                            </div>
+                            <p class="card-text">El Porsche 911 GT3 es la versión más pura y enfocada en el rendimiento. Con su motor atmosférico de 510 caballos de fuerza y transmisión manual de 6 velocidades, ofrece una experiencia de conducción directa y emocionante.</p>
+                            <div class="product-features">
+                                <span><i class="fas fa-horse"></i> 510 HP</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 318 km/h</span>
+                                <span><i class="fas fa-clock"></i> 3.4s</span>
+                            </div>
+                            <div class="product-price">
+                                <span class="price">$180,000 USD</span>
+                                <button class="btn btn-primary">Ver Detalles</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mini Cooper -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="product-card">
+                        <div class="product-badge">Oferta</div>
+                        <img src="../images/MiniCooper.png" class="card-img-top" alt="Mini Cooper">
+                        <div class="card-body">
+                            <h5 class="card-title">Mini Cooper S</h5>
+                            <div class="product-specs">
+                                <span><i class="fas fa-calendar"></i> 2023</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 5,000 km</span>
+                                <span><i class="fas fa-gas-pump"></i> Gasolina</span>
+                            </div>
+                            <p class="card-text">El Mini Cooper S combina el estilo icónico con un rendimiento deportivo. Su motor turbo de 192 caballos de fuerza y manejo ágil lo convierten en un auto divertido y práctico para el día a día.</p>
+                            <div class="product-features">
+                                <span><i class="fas fa-horse"></i> 192 HP</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 235 km/h</span>
+                                <span><i class="fas fa-clock"></i> 6.7s</span>
+                            </div>
+                            <div class="product-price">
+                                <span class="price">$45,000 USD</span>
+                                <button class="btn btn-primary">Ver Detalles</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- BMW M4 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="product-card">
+                        <div class="product-badge">Nuevo</div>
+                        <img src="../images/Audi R8.png" class="card-img-top" alt="BMW M4">
+                        <div class="card-body">
+                            <h5 class="card-title">BMW M4 Competition</h5>
+                            <div class="product-specs">
+                                <span><i class="fas fa-calendar"></i> 2024</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 1,000 km</span>
+                                <span><i class="fas fa-gas-pump"></i> Gasolina</span>
+                            </div>
+                            <p class="card-text">El BMW M4 Competition representa la perfecta combinación de lujo y rendimiento. Con su motor biturbo de 510 caballos de fuerza y tracción trasera, ofrece una experiencia de conducción deportiva excepcional.</p>
+                            <div class="product-features">
+                                <span><i class="fas fa-horse"></i> 510 HP</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 280 km/h</span>
+                                <span><i class="fas fa-clock"></i> 3.8s</span>
+                            </div>
+                            <div class="product-price">
+                                <span class="price">$95,000 USD</span>
+                                <button class="btn btn-primary">Ver Detalles</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Mercedes-AMG GT -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="product-card">
+                        <div class="product-badge">Destacado</div>
+                        <img src="../images/Porshe1.png" class="card-img-top" alt="Mercedes-AMG GT">
+                        <div class="card-body">
+                            <h5 class="card-title">Mercedes-AMG GT 63 S</h5>
+                            <div class="product-specs">
+                                <span><i class="fas fa-calendar"></i> 2024</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 2,000 km</span>
+                                <span><i class="fas fa-gas-pump"></i> Gasolina</span>
+                            </div>
+                            <p class="card-text">El Mercedes-AMG GT 63 S es un superdeportivo de cuatro puertas que combina lujo y rendimiento extremo. Su motor V8 biturbo de 630 caballos de fuerza lo convierte en uno de los sedanes más potentes del mercado.</p>
+                            <div class="product-features">
+                                <span><i class="fas fa-horse"></i> 630 HP</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 315 km/h</span>
+                                <span><i class="fas fa-clock"></i> 3.2s</span>
+                            </div>
+                            <div class="product-price">
+                                <span class="price">$160,000 USD</span>
+                                <button class="btn btn-primary">Ver Detalles</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Tesla Model S -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="product-card">
+                        <div class="product-badge">Eléctrico</div>
+                        <img src="../images/MiniCooper.png" class="card-img-top" alt="Tesla Model S">
+                        <div class="card-body">
+                            <h5 class="card-title">Tesla Model S Plaid</h5>
+                            <div class="product-specs">
+                                <span><i class="fas fa-calendar"></i> 2024</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 3,000 km</span>
+                                <span><i class="fas fa-bolt"></i> Eléctrico</span>
+                            </div>
+                            <p class="card-text">El Tesla Model S Plaid redefine el rendimiento eléctrico con sus 1,020 caballos de fuerza y aceleración de 0 a 100 km/h en menos de 2 segundos. Ofrece una autonomía de más de 600 km y tecnología de vanguardia.</p>
+                            <div class="product-features">
+                                <span><i class="fas fa-horse"></i> 1,020 HP</span>
+                                <span><i class="fas fa-tachometer-alt"></i> 322 km/h</span>
+                                <span><i class="fas fa-clock"></i> 1.99s</span>
+                            </div>
+                            <div class="product-price">
+                                <span class="price">$130,000 USD</span>
+                                <button class="btn btn-primary">Ver Detalles</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>ChangAI</h5>
+                    <p>Tu marketplace exclusivo de autos de lujo</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <h5>Síguenos</h5>
+                    <div class="social-links">
+                        <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="text-center">
+                <p class="mb-0">&copy; 2025 ChangAI. Todos los derechos reservados.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
