Agrego páginas de detalle para productos, reseñas, comentarios y mejoras en contacto

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto</title>
+  <title>Contacto | ChangAI</title>
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header class="main-header">
@@ -19,11 +20,23 @@
           </ul>
         </nav>
       </header>
-      
 
   <main class="content">
     <section class="contact-form">
       <h1>Contacto</h1>
+      <p>¿Tienes alguna consulta? ¡Contáctanos!</p>
+      <ul style="list-style:none; padding:0; margin-bottom:2rem;">
+        <li><strong>Email:</strong> <a href="mailto:dimofrancisco@gmail.com">dimofrancisco@gmail.com</a></li>
+        <li><strong>Teléfono:</strong> <a href="tel:+5493382567342">+54 9 3382 567342</a></li>
+      </ul>
+      <div class="social-links" style="margin-bottom:2rem;">
+        <a href="https://facebook.com" target="_blank" class="text-secondary me-3" aria-label="Facebook"><i class="fab fa-facebook fa-2x"></i></a>
+        <a href="https://instagram.com" target="_blank" class="text-secondary me-3" aria-label="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://twitter.com" target="_blank" class="text-secondary me-3" aria-label="Twitter"><i class="fab fa-twitter fa-2x"></i></a>
+        <a href="https://linkedin.com" target="_blank" class="text-secondary me-3" aria-label="LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://wa.me/5493382567342" target="_blank" class="text-secondary me-3" aria-label="WhatsApp"><i class="fab fa-whatsapp fa-2x"></i></a>
+        <a href="https://youtube.com" target="_blank" class="text-secondary me-3" aria-label="YouTube"><i class="fab fa-youtube fa-2x"></i></a>
+      </div>
       <form>
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre"><br><br>
@@ -36,12 +49,11 @@
 
         <button type="submit">Enviar</button>
       </form>
-      
     </section>
   </main>
 
   <footer class="main-footer">
-    <p>&copy; 2025 - ChangAi</p>
+    <p>&copy; 2025 - ChangAI. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
