--- a/pages/productos.html
+++ b/pages/productos.html
@@ -121,7 +121,7 @@
                             </div>
                             <div class="product-price">
                                 <span class="price">$250,000 USD</span>
-                                <button class="btn btn-primary">Ver Detalles</button>
+                                <a href="detalle-audi-r8.html" class="btn btn-primary">Ver Detalles</a>
                             </div>
                         </div>
                     </div>
