Initial commit: ChangAI luxury car marketplace

--- a/index.html
+++ b/index.html
@@ -90,28 +90,28 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="images/car1.jpg" class="card-img-top" alt="Audi RS e-tron GT">
+            <img src="images/cars/Audi-R8.jpg" class="card-img-top" alt="Audi R8">
             <div class="card-body">
-              <h5 class="card-title">Audi RS e-tron GT</h5>
-              <p class="card-text">El primer Audi RS 100% eléctrico, combinando rendimiento y sostenibilidad.</p>
+              <h5 class="card-title">Audi R8</h5>
+              <p class="card-text">El superdeportivo definitivo de Audi, combinando rendimiento y tecnología alemana.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="images/car2.jpg" class="card-img-top" alt="Porsche Taycan">
+            <img src="images/cars/Porsche-911.jpg" class="card-img-top" alt="Porsche 911">
             <div class="card-body">
-              <h5 class="card-title">Porsche Taycan</h5>
-              <p class="card-text">El primer Porsche totalmente eléctrico, redefiniendo el rendimiento.</p>
+              <h5 class="card-title">Porsche 911</h5>
+              <p class="card-text">Un ícono del rendimiento deportivo, con décadas de evolución y excelencia.</p>
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="images/car3.jpg" class="card-img-top" alt="BMW iX">
+            <img src="images/cars/BMW-M8.jpg" class="card-img-top" alt="BMW M8">
             <div class="card-body">
-              <h5 class="card-title">BMW iX</h5>
-              <p class="card-text">El SUV eléctrico más avanzado de BMW, con tecnología de vanguardia.</p>
+              <h5 class="card-title">BMW M8</h5>
+              <p class="card-text">La máxima expresión del lujo deportivo de BMW.</p>
             </div>
           </div>
         </div>
