--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,59 +1,222 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto | ChangAI</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contacta con ChangAI, tu marketplace de autos de lujo. Estamos aquí para responder todas tus consultas sobre nuestros vehículos exclusivos.">
+    <meta name="keywords" content="contacto ChangAI, autos de lujo, consultas, soporte, atención al cliente">
+    <meta name="author" content="ChangAI">
+    <title>Contacto | ChangAI - Marketplace de Autos de Lujo</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header class="main-header">
-        <a href="../index.html" class="brand">ChangAI</a>
-        <nav class="navbar">
-          <ul>
-            <li><a href="inicio.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
-            <li><a href="contact.html">Contacto</a></li>
-            <li><a href="login.html">Iniciar Sesión</a></li>
-            <li><a href="registro.html">Registro</a></li>
-          </ul>
-        </nav>
-      </header>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="../index.html">
+                <i class="fas fa-car-side"></i> ChangAI
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="subastas.html">Subastas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="contact.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Iniciar Sesión</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registro.html">Registro</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <main class="content">
-    <section class="contact-form">
-      <h1>Contacto</h1>
-      <p>¿Tienes alguna consulta? ¡Contáctanos!</p>
-      <ul style="list-style:none; padding:0; margin-bottom:2rem;">
-        <li><strong>Email:</strong> <a href="mailto:dimofrancisco@gmail.com">dimofrancisco@gmail.com</a></li>
-        <li><strong>Teléfono:</strong> <a href="tel:+5493382567342">+54 9 3382 567342</a></li>
-      </ul>
-      <div class="social-links" style="margin-bottom:2rem;">
-        <a href="https://facebook.com" target="_blank" class="text-secondary me-3" aria-label="Facebook"><i class="fab fa-facebook fa-2x"></i></a>
-        <a href="https://instagram.com" target="_blank" class="text-secondary me-3" aria-label="Instagram"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="https://twitter.com" target="_blank" class="text-secondary me-3" aria-label="Twitter"><i class="fab fa-twitter fa-2x"></i></a>
-        <a href="https://linkedin.com" target="_blank" class="text-secondary me-3" aria-label="LinkedIn"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="https://wa.me/5493382567342" target="_blank" class="text-secondary me-3" aria-label="WhatsApp"><i class="fab fa-whatsapp fa-2x"></i></a>
-        <a href="https://youtube.com" target="_blank" class="text-secondary me-3" aria-label="YouTube"><i class="fab fa-youtube fa-2x"></i></a>
-      </div>
-      <form>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre"><br><br>
+    <!-- Hero Section -->
+    <header class="contact-hero">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center">
+                <div class="col-12 text-center text-white">
+                    <h1 class="display-4 fw-bold">Contacto</h1>
+                    <p class="lead">Estamos aquí para ayudarte</p>
+                </div>
+            </div>
+        </div>
+    </header>
 
-        <label for="email">Correo electrónico:</label>
-        <input type="email" id="email" name="email"><br><br>
+    <!-- Contact Section -->
+    <section class="contact-section py-5">
+        <div class="container">
+            <div class="row">
+                <!-- Contact Information -->
+                <div class="col-md-4 mb-4 mb-md-0">
+                    <div class="contact-info p-4 bg-light rounded shadow-sm">
+                        <h3 class="h4 mb-4">Información de Contacto</h3>
+                        <div class="d-flex mb-3">
+                            <i class="fas fa-envelope fa-fw text-primary me-2"></i>
+                            <a href="mailto:dimofrancisco@gmail.com" class="text-dark text-decoration-none">dimofrancisco@gmail.com</a>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <i class="fas fa-phone fa-fw text-primary me-2"></i>
+                            <a href="tel:+5493382567342" class="text-dark text-decoration-none">+54 9 3382 567342</a>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <i class="fas fa-map-marker-alt fa-fw text-primary me-2"></i>
+                            <span>Buenos Aires, Argentina</span>
+                        </div>
+                        <hr class="my-4">
+                        <h4 class="h5 mb-3">Síguenos en Redes</h4>
+                        <div class="social-links">
+                            <a href="https://facebook.com" target="_blank" class="btn btn-outline-primary me-2" aria-label="Facebook">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://instagram.com" target="_blank" class="btn btn-outline-primary me-2" aria-label="Instagram">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="https://twitter.com" target="_blank" class="btn btn-outline-primary me-2" aria-label="Twitter">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="https://wa.me/5493382567342" target="_blank" class="btn btn-outline-primary me-2" aria-label="WhatsApp">
+                                <i class="fab fa-whatsapp"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
-        <label for="mensaje">Mensaje:</label><br>
-        <textarea id="mensaje" name="mensaje"></textarea><br><br>
-
-        <button type="submit">Enviar</button>
-      </form>
+                <!-- Contact Form -->
+                <div class="col-md-8">
+                    <div class="contact-form p-4 bg-white rounded shadow-sm">
+                        <h3 class="h4 mb-4">Envíanos un Mensaje</h3>
+                        <form id="contactForm" class="needs-validation" novalidate>
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="nombre" class="form-label">Nombre</label>
+                                    <input type="text" class="form-control" id="nombre" required>
+                                    <div class="invalid-feedback">
+                                        Por favor ingresa tu nombre
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="apellido" class="form-label">Apellido</label>
+                                    <input type="text" class="form-control" id="apellido" required>
+                                    <div class="invalid-feedback">
+                                        Por favor ingresa tu apellido
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Correo Electrónico</label>
+                                <input type="email" class="form-control" id="email" required>
+                                <div class="invalid-feedback">
+                                    Por favor ingresa un correo electrónico válido
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="asunto" class="form-label">Asunto</label>
+                                <select class="form-select" id="asunto" required>
+                                    <option value="">Selecciona un asunto</option>
+                                    <option value="consulta">Consulta General</option>
+                                    <option value="compra">Información de Compra</option>
+                                    <option value="venta">Información de Venta</option>
+                                    <option value="otro">Otro</option>
+                                </select>
+                                <div class="invalid-feedback">
+                                    Por favor selecciona un asunto
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="mensaje" class="form-label">Mensaje</label>
+                                <textarea class="form-control" id="mensaje" rows="5" required></textarea>
+                                <div class="invalid-feedback">
+                                    Por favor ingresa tu mensaje
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-paper-plane me-2"></i>Enviar Mensaje
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-  </main>
 
-  <footer class="main-footer">
-    <p>&copy; 2025 - ChangAI. Todos los derechos reservados.</p>
-  </footer>
+    <!-- Map Section -->
+    <section class="map-section py-5 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="ratio ratio-21x9">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.0168878894506!2d-58.38375908477038!3d-34.60373888045943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4aa9f0a6da5edb%3A0x11bead4e234e558b!2sObelisco!5e0!3m2!1ses!2sar!4v1635959123456!5m2!1ses!2sar" 
+                            allowfullscreen="" loading="lazy" class="border-0 rounded shadow-sm"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>ChangAI</h5>
+                    <p>Tu marketplace exclusivo de autos de lujo</p>
+                </div>
+                <div class="col-md-6 text-md-end">
+                    <h5>Síguenos</h5>
+                    <div class="social-links">
+                        <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
+                        <a href="#" class="text-white me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="text-white"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="text-center">
+                <p class="mb-0">&copy; 2025 ChangAI. Todos los derechos reservados.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Form Validation Script -->
+    <script>
+        (() => {
+            'use strict';
+            const forms = document.querySelectorAll('.needs-validation');
+            Array.from(forms).forEach(form => {
+                form.addEventListener('submit', event => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        })();
+    </script>
+
+    <!-- Custom JavaScript -->
+    <script src="../js/main.js"></script>
 </body>
 </html>
