feat: Agregadas páginas de detalle para nuevos autos y actualizadas imágenes

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="ChangAI - Tu marketplace exclusivo de autos de lujo">
+  <meta name="description" content="ChangAI - Tu marketplace exclusivo de autos de lujo. Encuentra los mejores autos premium, deportivos y de colección.">
+  <meta name="keywords" content="autos de lujo, ChangAI, Mercedes-Benz, BMW, Audi, Porsche, Tesla, compra de autos, venta de autos, marketplace automotriz">
+  <meta name="author" content="ChangAI">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="ChangAI - Marketplace de Autos de Lujo">
+  <meta property="og:description" content="Tu destino para encontrar los mejores autos de lujo">
+  <meta property="og:image" content="images/og-image.jpg">
+  <meta property="og:url" content="https://changai.com">
   <title>ChangAI - Autos de Lujo</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome -->
