--- a/pages/productos.html
+++ b/pages/productos.html
@@ -110,17 +110,17 @@
     <section class="products-grid py-5">
         <div class="container">
             <div class="row g-4">
-                <!-- Mercedes-Benz EQS 580 4MATIC -->
+                <!-- Mercedes-Benz EQS -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="product-card">
+                    <div class="product-card shadow-sm rounded">
                         <div class="product-badge">Nuevo</div>
-                        <img src="../images/Audi R8.png" class="card-img-top" alt="Audi R8">
+                        <img src="../images/cars/Mercedes-EQS.jpg" class="card-img-top" alt="Mercedes-Benz EQS">
                         <div class="card-body">
                             <h5 class="card-title">Mercedes-Benz EQS 580 4MATIC</h5>
                             <div class="product-specs">
                                 <span><i class="fas fa-calendar"></i> 2023</span>
                                 <span><i class="fas fa-tachometer-alt"></i> 3,500 km</span>
-                                <span><i class="fas fa-bolt"></i> Eléctrico</span>
+                                <span><i class="fas fa-charging-station"></i> Eléctrico</span>
                             </div>
                             <p class="card-text">El sedán eléctrico de lujo más avanzado de Mercedes-Benz, con autonomía superior a 600 km y tecnología de vanguardia.</p>
                             <div class="product-features">
@@ -129,24 +129,24 @@
                                 <span><i class="fas fa-clock"></i> 4.3s</span>
                             </div>
                             <div class="product-price">
-                                <span class="price">$220,000 USD <br><small>($264.000.000 ARS)</small></span>
-                                <a href="detalle-eqs-580.html" class="btn btn-primary">Ver Detalles</a>
+                                <span class="price">$220,000 USD</span>
+                                <a href="detalle-mercedes-eqs.html" class="btn btn-primary">Ver Detalles</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Tesla Model X Plaid -->
+                <!-- Tesla Model X -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="product-card">
+                    <div class="product-card shadow-sm rounded">
                         <div class="product-badge">Destacado</div>
-                        <img src="../images/Porshe1.png" class="card-img-top" alt="Porsche 911">
+                        <img src="../images/cars/Tesla-Model-X.jpg" class="card-img-top" alt="Tesla Model X">
                         <div class="card-body">
                             <h5 class="card-title">Tesla Model X Plaid</h5>
                             <div class="product-specs">
                                 <span><i class="fas fa-calendar"></i> 2022</span>
                                 <span><i class="fas fa-tachometer-alt"></i> 8,000 km</span>
-                                <span><i class="fas fa-bolt"></i> Eléctrico</span>
+                                <span><i class="fas fa-charging-station"></i> Eléctrico</span>
                             </div>
                             <p class="card-text">SUV eléctrico de alto rendimiento, con aceleración de superdeportivo y espacio para toda la familia.</p>
                             <div class="product-features">
@@ -156,23 +156,23 @@
                             </div>
                             <div class="product-price">
                                 <span class="price">$180,000 USD</span>
-                                <button class="btn btn-primary">Ver Detalles</button>
+                                <a href="detalle-tesla-x.html" class="btn btn-primary">Ver Detalles</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Lexus LC 500h -->
+                <!-- Lexus LC -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="product-card">
+                    <div class="product-card shadow-sm rounded">
                         <div class="product-badge">Oferta</div>
-                        <img src="../images/MiniCooper.png" class="card-img-top" alt="Mini Cooper">
+                        <img src="../images/cars/Lexus-LC.jpg" class="card-img-top" alt="Lexus LC">
                         <div class="card-body">
                             <h5 class="card-title">Lexus LC 500h</h5>
                             <div class="product-specs">
                                 <span><i class="fas fa-calendar"></i> 2021</span>
                                 <span><i class="fas fa-tachometer-alt"></i> 6,200 km</span>
-                                <span><i class="fas fa-gas-pump"></i> Híbrido</span>
+                                <span><i class="fas fa-charging-station"></i> Híbrido</span>
                             </div>
                             <p class="card-text">Coupé híbrido de lujo, con diseño impactante y tecnología japonesa de última generación.</p>
                             <div class="product-features">
@@ -182,7 +182,7 @@
                             </div>
                             <div class="product-price">
                                 <span class="price">$45,000 USD</span>
-                                <button class="btn btn-primary">Ver Detalles</button>
+                                <a href="detalle-lexus-lc.html" class="btn btn-primary">Ver Detalles</a>
                             </div>
                         </div>
                     </div>
@@ -190,15 +190,15 @@
 
                 <!-- Jaguar I-Pace EV400 -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="product-card">
+                    <div class="product-card shadow-sm rounded">
                         <div class="product-badge">Nuevo</div>
-                        <img src="../images/Audi R8.png" class="card-img-top" alt="BMW M4">
+                        <img src="../images/cars/Jaguar-IPace.jpg" class="card-img-top" alt="Jaguar I-Pace EV400">
                         <div class="card-body">
                             <h5 class="card-title">Jaguar I-Pace EV400</h5>
                             <div class="product-specs">
                                 <span><i class="fas fa-calendar"></i> 2022</span>
                                 <span><i class="fas fa-tachometer-alt"></i> 12,000 km</span>
-                                <span><i class="fas fa-bolt"></i> Eléctrico</span>
+                                <span><i class="fas fa-charging-station"></i> Eléctrico</span>
                             </div>
                             <p class="card-text">SUV eléctrico británico, premiado por su diseño y autonomía.</p>
                             <div class="product-features">
@@ -208,7 +208,7 @@
                             </div>
                             <div class="product-price">
                                 <span class="price">$95,000 USD</span>
-                                <button class="btn btn-primary">Ver Detalles</button>
+                                <a href="detalle-jaguar-ipace.html" class="btn btn-primary">Ver Detalles</a>
                             </div>
                         </div>
                     </div>
@@ -216,15 +216,15 @@
 
                 <!-- BMW i8 Roadster -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="product-card">
+                    <div class="product-card shadow-sm rounded">
                         <div class="product-badge">Destacado</div>
-                        <img src="../images/Porshe1.png" class="card-img-top" alt="Mercedes-AMG GT">
+                        <img src="../images/cars/BMW-i8.jpg" class="card-img-top" alt="BMW i8 Roadster">
                         <div class="card-body">
                             <h5 class="card-title">BMW i8 Roadster</h5>
                             <div class="product-specs">
                                 <span><i class="fas fa-calendar"></i> 2020</span>
                                 <span><i class="fas fa-tachometer-alt"></i> 15,000 km</span>
-                                <span><i class="fas fa-gas-pump"></i> Híbrido</span>
+                                <span><i class="fas fa-charging-station"></i> Híbrido</span>
                             </div>
                             <p class="card-text">Deportivo híbrido enchufable, con diseño futurista y eficiencia alemana.</p>
                             <div class="product-features">
@@ -234,7 +234,7 @@
                             </div>
                             <div class="product-price">
                                 <span class="price">$160,000 USD</span>
-                                <button class="btn btn-primary">Ver Detalles</button>
+                                <a href="detalle-bmw-i8.html" class="btn btn-primary">Ver Detalles</a>
                             </div>
                         </div>
                     </div>
@@ -242,17 +242,17 @@
 
                 <!-- Tesla Model S -->
                 <div class="col-md-6 col-lg-4">
-                    <div class="product-card">
+                    <div class="product-card shadow-sm rounded">
                         <div class="product-badge">Eléctrico</div>
-                        <img src="../images/MiniCooper.png" class="card-img-top" alt="Tesla Model S">
+                        <img src="../images/cars/Tesla-Model-S.jpg" class="card-img-top" alt="Tesla Model S Plaid">
                         <div class="card-body">
                             <h5 class="card-title">Tesla Model S Plaid</h5>
                             <div class="product-specs">
                                 <span><i class="fas fa-calendar"></i> 2024</span>
                                 <span><i class="fas fa-tachometer-alt"></i> 3,000 km</span>
-                                <span><i class="fas fa-bolt"></i> Eléctrico</span>
+                                <span><i class="fas fa-charging-station"></i> Eléctrico</span>
                             </div>
-                            <p class="card-text">El Tesla Model S Plaid redefine el rendimiento eléctrico con sus 1,020 caballos de fuerza y aceleración de 0 a 100 km/h en menos de 2 segundos. Ofrece una autonomía de más de 600 km y tecnología de vanguardia.</p>
+                            <p class="card-text">El Tesla Model S Plaid redefine el rendimiento eléctrico con sus 1,020 caballos de fuerza y aceleración de 0 a 100 km/h en menos de 2 segundos.</p>
                             <div class="product-features">
                                 <span><i class="fas fa-horse"></i> 1,020 HP</span>
                                 <span><i class="fas fa-tachometer-alt"></i> 322 km/h</span>
@@ -260,7 +260,7 @@
                             </div>
                             <div class="product-price">
                                 <span class="price">$130,000 USD</span>
-                                <button class="btn btn-primary">Ver Detalles</button>
+                                <a href="detalle-tesla-s.html" class="btn btn-primary">Ver Detalles</a>
                             </div>
                         </div>
                     </div>
