--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,8 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contacto | ChangAI</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="../css/style.css">
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <meta name="keywords" content="autos de lujo, ChangAI, compra de autos, venta de autos, marketplace automotriz">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="ChangAI - Marketplace de Autos de Lujo">
+  <meta property="og:description" content="Tu destino para encontrar los mejores autos de lujo">
+  <meta property="og:image" content="URL_TO_YOUR_LOGO">
 </head>
 <body>
     <!-- Navigation -->
