--- a/pages/registro.html
+++ b/pages/registro.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="subastas.html">Subastas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="contact.html">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="login.html">Iniciar Sesión</a>
